AP-9807: Fixed misalignment in view
AP-9807: Date Input can not apply new value from view when value is set by wrapped metanode dialog

--- a/org.knime.js.quickforms/js-src/org/knime/js/base/node/quickform/input/date2/DateInput2.css
+++ b/org.knime.js.quickforms/js-src/org/knime/js/base/node/quickform/input/date2/DateInput2.css
@@ -1,5 +1,5 @@
 .ui-datepicker-trigger {
-    margin: 0 5px 10px;
+    margin: 0 5px 0;
     padding: 5px;
     border: 1px solid silver;
     border-radius: 5px;
@@ -29,15 +29,14 @@
 
 .ui-spinner{
 	height: 30px;
-	margin-bottom: 5px;
+	margin-bottom: 2px;
 }
 
 #nowButton {
 	vertical-align: middle;
 	width: 70px;
     height: 32px;
-    margin-top: 0px;
-	margin-right: 0px;
+    margin: 0 0 2px 0;
     border-radius: 5px;
     border: 1px solid silver;
 	background: #f1f1f1;
